# testQt

testQt/: CMakeLists.txt  main.cpp
testQt/Forms/: mainwindow.ui
testQt/Sources/: main.cpp  mainwindow.cpp
